<resources>
    <string name = "app_name">Tip Calculator</string>
    <string name = "calculate_tip">Calculate Tip</string>
    <string name = "bill_amount">Bill Amount</string>
    <string name="tip_percentage">Tip Percent</string>
    <string name="split_Number">Split Member</string>
    <string name="split_amount">Split Amount</string>
    <string name="round_up_tip">Round Up Tip?</string>
    <string name = "tip_amount">Tip Amount: %s</string>
</resources>